# AuthService

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  gunicorn.config.py  main.py  pyproject.toml  setup.cfg
.github/: codecov.yml
.github/workflows/: cicd.yml
auth_service/: auth.py  db.py  log.py  models.py  response.py  security.py  settings.py  utils.py
auth_service/api/: app.py  auth.py  endpoints.py  events.py  exception_handlers.py  exceptions.py  middlewares.py  responses.py  services.py
auth_service/api/endpoints/: __init__.py  admin.py  health.py  registration.py  responses.py  session.py  user.py
auth_service/db/: exceptions.py  models.py  service.py
auth_service/mail/: config.py  service.py
auth_service/mail/templates/: change_email.html  registration.html  reset_password.html
auth_service/models/: auth.py  common.py  token.py  user.py
migrations/: env.py
migrations/versions/: 20210607224539_add_users_table.py  20210607231656_add_email_tokens_table.py  20210611212138_add_newcomers_table.py  20210611212147_add_registration_tokens_table.py  20210614150139_add_sessions_table.py  20210614153046_add_access_tokens_table.py  20210614153054_add_refresh_tokens_table.py  20210617153935_add_email_tokens_table.py  20210619142733_add_password_tokens_table.py  20220109183600_add_marketing_agree_flag.py
tests/: conftest.py  constants.py  helpers.py  utils.py
tests/api/endpoints/: test_admin.py  test_health.py  test_ping.py  test_registration.py  test_session.py  test_user.py
tests/db/: test_service.py
